# iot-data-bridge

./: README.md  pyproject.toml  requirements.txt
data-sources/: README.md  data_generator.py  mqtt_publisher.py  requirements.txt  signalr_publisher.py  start-mqtt.bat  start-mqtt.sh  start-signalr.bat  start-signalr.sh  start.bat  start.sh
data_sources/: README.md  test_mqtt_publisher-multi-vm.py  test_mqtt_publisher.py  test_mqtt_subscriber.py
deploy/: DEPLOYMENT_GUIDE.md
deploy/data-source/: README.md  install.bat  requirements.txt  start.bat  start.sh  test_connection.py  test_data.py  test_mqtt_publisher.py
deploy/device/: README.md  device.py  device_config.yaml  requirements.txt  start.bat  start.sh
deploy/middleware-server/: README.md  mosquitto.conf  start-mqtt-only.bat  start-mqtt-only.sh  start-signalr-only.bat  start-signalr-only.sh  start.sh
devices/: README.md  device.py  device_config-multi-vm-vm-b.yaml  device_config-multi-vm.yaml  device_config.yaml  device_config_vm_b.yaml  requirements.txt  signalr_device.py  start-mqtt.sh  start-signalr.bat  start-signalr.sh  start.bat  start.sh
docs/: MULTI_VM_DEPLOYMENT.md
middleware/: README.md  mosquitto.conf  performance_test.py  requirements-mqtt.txt  requirements-signalr.txt  requirements.txt  start-mqtt.bat  start-mqtt.sh  start-signalr-hub.sh  start-signalr-integrated.sh  start-signalr.bat  start-signalr.sh  start.bat  start.sh  test_config.py  test_full_system.py
middleware/config/: app-mqtt.yaml  app-multi-vm.yaml  app-signalr.yaml  app.yaml  (+3 more)
scripts/: start.bat  start.sh  stop.bat  stop.sh
(+99 files in other folders)
